--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.2",
-    "@solana/pay": "^0.2.4"
+    "@solana/pay": "^0.2.4",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.0"
   }
 }
